--- a/src/app/notifications/notification-list/notification-list.component.html
+++ b/src/app/notifications/notification-list/notification-list.component.html
@@ -6,7 +6,8 @@
         </thead>
         <tbody>
           <tr *ngFor="let emp of list">
-            <td (click)="onEdit(emp)">{{emp.title}}</td>
+            <!-- <td (click)="onEdit(emp)">{{emp.title}}</td> -->
+            <td>{{emp.title}}</td>
             
           </tr>
         </tbody>
