--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,20 @@
+<!-- <h3> {{ message | async | json }} </h3>
+ -->
+ <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <!-- <a class="nav-link active" href="#">Notifications</a> -->
+      <h4>NoO</h4>
+    </li>
+    <!-- <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+    </li> -->
+  </ul>
 <div class="container">
   <div class="row">
    <app-notifications></app-notifications>
