--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -1,6 +1,7 @@
-<div class="row">
-       
-        <div class="col-md-7">
-          <app-notification-list></app-notification-list>
-        </div>
-      </div>
+
+
+<mat-toolbar color="primary">
+	NOTIFICATIONS
+</mat-toolbar>
+
+<app-notification-list></app-notification-list>
