--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: 'JosefinSans',Roboto, "Helvetica Neue", sans-serif; }
+
+@font-face {
+    font-family: JosefinSans;
+    src: url(assets/font/JosefinSans.ttf) format("opentype");
+  }
