--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,5 @@
  -->
 
 
-<app-notifications></app-notifications>
+<!-- <app-notifications></app-notifications> -->
+<router-outlet></router-outlet>
