--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -1,7 +1,12 @@
+<!-- <mat-toolbar color="dark">
+  <mat-toolbar-row>
+	<span>Atria Notifications</span>
+	<span class="example-spacer" style="flex: 1 1 auto;"></span>
+    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example user verified icon" style="padding: 0 14px;">event_note</mat-icon>
+  </mat-toolbar-row> 
 
 
-<mat-toolbar color="primary">
-	NOTIFICATIONS
 </mat-toolbar>
+-->
 
 <app-notification-list></app-notification-list>
