--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
-
-html, body { height: 100%; }
-body { margin: 0; font-family: 'JosefinSans',Roboto, "Helvetica Neue", sans-serif; }
+/* You can add global styles to this file, and also import other style files 
 
 @font-face {
-    font-family: JosefinSans;
-    src: url(assets/font/JosefinSans.ttf) format("opentype");
+  font-family: 'Josefin Sans', sans-serif;
+   src: url(assets/font/JosefinSans.ttf) format("opentype");
+  }
+
+  */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Montserrat','Josefin Sans',Roboto, "Helvetica Neue", sans-serif; }
+
+@font-face {
+  font-family: 'Josefin Sans', sans-serif;
+   src: url(assets/font/JosefinSans.ttf) format("opentype");
   }
